feat(particles): 添加快速尘埃粒子效果并优化法术实体性能
- 新增 FastDustParticle 粒子渲染器实现
- 添加 FastDustParticleOptions 粒子选项配置类
- 注册新的快速尘埃粒子类型到模组系统
- 在客户端事件处理器中注册粒子提供者
- 为法术实体添加区块强制加载功能以提升性能
- 重构法术效果中的粒子发射逻辑，替换原有尘埃粒子
- 添加粒子配置文件 assets/programmable_magic/particles/fast_dust.json
- 实现粒子颜色随速度变化的动态效果
- 优化高速移动时的大烟雾粒子效果